loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__race_for_expression_codegen.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
pub use crate::__incan_std::r#async;
pub async fn fast() -> i64 {
    return 1;
}
pub async fn slow() -> i64 {
    return 2;
}
pub async fn fastest() -> i64 {
    return incan_std_async::race::scoped_race(
            vec![
                incan_std_async::race::scoped_arm(fast(), | value | value),
                incan_std_async::race::scoped_arm(slow(), | value | value)
            ],
        )
        .await;
}
