loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__rfc024_partial_alias_derive.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
pub use crate::__incan_std::serde::json::Serialize as JsonSerialize;
#[derive(
    ::serde::Serialize,
    Debug,
    Clone,
    incan_derive::FieldInfo,
    incan_derive::IncanClass
)]
struct Payload {
    value: i64,
}
impl incan_std_core::reflection::HasClassName for Payload {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_std_core::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_std_core::reflection::HasTypeClassName for Payload {
    fn __class_name__() -> &'static str {
        "Payload"
    }
}
impl incan_std_core::reflection::HasFieldMetadata for Payload {
    fn __fields__(
        &self,
    ) -> incan_std_core::frozen::FrozenList<incan_std_core::reflection::FieldInfo> {
        <Self as incan_std_core::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_std_core::reflection::HasTypeFieldMetadata for Payload {
    fn __fields__() -> incan_std_core::frozen::FrozenList<
        incan_std_core::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_std_core::reflection::FieldInfo; 1] = [
            incan_std_core::reflection::FieldInfo {
                name: incan_std_core::frozen::FrozenStr::new("value"),
                alias: None,
                description: None,
                wire_name: incan_std_core::frozen::FrozenStr::new("value"),
                type_name: incan_std_core::frozen::FrozenStr::new("int"),
                has_default: false,
                extra: incan_std_core::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_std_core::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_std_core::reflection::HasFieldValueReflection for Payload {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            "value" => Some(format!("{}", self.value)),
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![("value".to_string(), format!("{}", self.value))]
    }
}
impl JsonSerialize for Payload {
    fn to_json(&self) -> String {
        return {
            let __incan_json_value = &(self);
            incan_std_data::json::__private::stringify_or_raise(
                __incan_json_value,
                std::any::type_name_of_val(__incan_json_value),
            )
        };
    }
}
impl Payload {
    #[inline(never)]
    pub fn to_json(&self) -> String {
        <Self as JsonSerialize>::to_json(self)
    }
}
fn encode<T: JsonSerialize + ::serde::Serialize>(value: T) -> String {
    return crate::__incan_std::serde::json::Serialize::to_json(&value);
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    return encode(Payload { value: 1 });
}
