loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__rfc029_union_types.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
#[derive(Clone)]
pub enum __IncanUnion2f03b6f5e4eabba1 {
    V0(String),
    V1(bool),
    V2(i64),
}
impl ::core::fmt::Debug for __IncanUnion2f03b6f5e4eabba1 {
    fn fmt(&self, formatter: &mut ::core::fmt::Formatter<'_>) -> ::core::fmt::Result {
        match self {
            Self::V0(value) => ::core::fmt::Debug::fmt(value, formatter),
            Self::V1(value) => ::core::fmt::Debug::fmt(value, formatter),
            Self::V2(value) => ::core::fmt::Debug::fmt(value, formatter),
        }
    }
}
#[derive(Clone)]
pub enum __IncanUnion43fbd19e99c1db05 {
    V0(String),
    V1(bool),
    V2(f64),
    V3(i64),
}
impl ::core::fmt::Debug for __IncanUnion43fbd19e99c1db05 {
    fn fmt(&self, formatter: &mut ::core::fmt::Formatter<'_>) -> ::core::fmt::Result {
        match self {
            Self::V0(value) => ::core::fmt::Debug::fmt(value, formatter),
            Self::V1(value) => ::core::fmt::Debug::fmt(value, formatter),
            Self::V2(value) => ::core::fmt::Debug::fmt(value, formatter),
            Self::V3(value) => ::core::fmt::Debug::fmt(value, formatter),
        }
    }
}
#[derive(Clone)]
pub enum __IncanUnionaff9193be7941891 {
    V0(String),
    V1(f64),
    V2(i64),
}
impl ::core::fmt::Debug for __IncanUnionaff9193be7941891 {
    fn fmt(&self, formatter: &mut ::core::fmt::Formatter<'_>) -> ::core::fmt::Result {
        match self {
            Self::V0(value) => ::core::fmt::Debug::fmt(value, formatter),
            Self::V1(value) => ::core::fmt::Debug::fmt(value, formatter),
            Self::V2(value) => ::core::fmt::Debug::fmt(value, formatter),
        }
    }
}
#[derive(Clone)]
pub enum __IncanUnionbd05f9b5647daa54 {
    V0(String),
    V1(bool),
}
impl ::core::fmt::Debug for __IncanUnionbd05f9b5647daa54 {
    fn fmt(&self, formatter: &mut ::core::fmt::Formatter<'_>) -> ::core::fmt::Result {
        match self {
            Self::V0(value) => ::core::fmt::Debug::fmt(value, formatter),
            Self::V1(value) => ::core::fmt::Debug::fmt(value, formatter),
        }
    }
}
#[derive(Clone)]
pub enum __IncanUnionc4e172615a54ed2d {
    V0(String),
    V1(i64),
}
impl ::core::fmt::Debug for __IncanUnionc4e172615a54ed2d {
    fn fmt(&self, formatter: &mut ::core::fmt::Formatter<'_>) -> ::core::fmt::Result {
        match self {
            Self::V0(value) => ::core::fmt::Debug::fmt(value, formatter),
            Self::V1(value) => ::core::fmt::Debug::fmt(value, formatter),
        }
    }
}
#[derive(Clone)]
pub enum __IncanUnionf030b96172dcb024 {
    V0(String),
    V1(f64),
}
impl ::core::fmt::Debug for __IncanUnionf030b96172dcb024 {
    fn fmt(&self, formatter: &mut ::core::fmt::Formatter<'_>) -> ::core::fmt::Result {
        match self {
            Self::V0(value) => ::core::fmt::Debug::fmt(value, formatter),
            Self::V1(value) => ::core::fmt::Debug::fmt(value, formatter),
        }
    }
}
pub fn parse_value(flag: bool) -> __IncanUnionc4e172615a54ed2d {
    if flag {
        return __IncanUnionc4e172615a54ed2d::V1(42);
    }
    return __IncanUnionc4e172615a54ed2d::V0("fallback".to_string());
}
pub fn normalize(value: __IncanUnionc4e172615a54ed2d) -> String {
    match value.clone() {
        __IncanUnionc4e172615a54ed2d::V1(_) => {
            return "number".to_string();
        }
        __IncanUnionc4e172615a54ed2d::V0(value) => {
            return incan_std_core::strings::str_upper(&value);
        }
    }
}
pub fn describe(value: __IncanUnionc4e172615a54ed2d) -> String {
    let _ = match value {
        __IncanUnionc4e172615a54ed2d::V1(n) => {
            return n.to_string();
        }
        __IncanUnionc4e172615a54ed2d::V0(s) => {
            return incan_std_core::strings::str_upper(&s);
        }
    };
}
pub fn label(value: Option<String>) -> String {
    match value.clone() {
        Some(value) => {
            return incan_std_core::strings::str_upper(&value);
        }
        None => {}
    }
    return "missing".to_string();
}
pub fn describe_optional(value: Option<__IncanUnionc4e172615a54ed2d>) -> String {
    let _ = match value {
        Some(__IncanUnionc4e172615a54ed2d::V1(n)) => {
            return n.to_string();
        }
        Some(__IncanUnionc4e172615a54ed2d::V0(s)) => {
            return incan_std_core::strings::str_upper(&s);
        }
        None => {
            return "missing".to_string();
        }
    };
}
pub fn describe_wide(value: __IncanUnion2f03b6f5e4eabba1) -> String {
    match value.clone() {
        __IncanUnion2f03b6f5e4eabba1::V2(_) => {
            return "number".to_string();
        }
        __IncanUnion2f03b6f5e4eabba1::V0(__incan_union_value_0) => {
            let value = __IncanUnionbd05f9b5647daa54::V0(__incan_union_value_0);
            let _ = match value {
                __IncanUnionbd05f9b5647daa54::V1(flag) => {
                    if flag {
                        return "true".to_string();
                    }
                    return "false".to_string();
                }
                __IncanUnionbd05f9b5647daa54::V0(text) => {
                    return incan_std_core::strings::str_upper(&text);
                }
            };
        }
        __IncanUnion2f03b6f5e4eabba1::V1(__incan_union_value_1) => {
            let value = __IncanUnionbd05f9b5647daa54::V1(__incan_union_value_1);
            let _ = match value {
                __IncanUnionbd05f9b5647daa54::V1(flag) => {
                    if flag {
                        return "true".to_string();
                    }
                    return "false".to_string();
                }
                __IncanUnionbd05f9b5647daa54::V0(text) => {
                    return incan_std_core::strings::str_upper(&text);
                }
            };
        }
    }
}
pub fn describe_chain(value: __IncanUnion2f03b6f5e4eabba1) -> String {
    match value.clone() {
        __IncanUnion2f03b6f5e4eabba1::V2(_) => {
            return "number".to_string();
        }
        __IncanUnion2f03b6f5e4eabba1::V0(__incan_union_value_0) => {
            let value = __IncanUnionbd05f9b5647daa54::V0(__incan_union_value_0);
            match value.clone() {
                __IncanUnionbd05f9b5647daa54::V0(value) => {
                    return incan_std_core::strings::str_upper(&value);
                }
                __IncanUnionbd05f9b5647daa54::V1(value) => {
                    if value {
                        return "true".to_string();
                    }
                    return "false".to_string();
                }
            }
        }
        __IncanUnion2f03b6f5e4eabba1::V1(__incan_union_value_1) => {
            let value = __IncanUnionbd05f9b5647daa54::V1(__incan_union_value_1);
            match value {
                __IncanUnionbd05f9b5647daa54::V0(value) => {
                    return incan_std_core::strings::str_upper(&value);
                }
                __IncanUnionbd05f9b5647daa54::V1(value) => {
                    if value {
                        return "true".to_string();
                    }
                    return "false".to_string();
                }
            }
        }
    }
}
pub fn describe_wide_chain(value: __IncanUnion43fbd19e99c1db05) -> String {
    match value.clone() {
        __IncanUnion43fbd19e99c1db05::V1(_) => {
            return "bool".to_string();
        }
        __IncanUnion43fbd19e99c1db05::V0(__incan_union_value_0) => {
            let value = __IncanUnionaff9193be7941891::V0(__incan_union_value_0);
            match value.clone() {
                __IncanUnionaff9193be7941891::V2(_) => {
                    return "int".to_string();
                }
                __IncanUnionaff9193be7941891::V0(__incan_union_value_0) => {
                    let value = __IncanUnionf030b96172dcb024::V0(__incan_union_value_0);
                    match value.clone() {
                        __IncanUnionf030b96172dcb024::V1(_) => {
                            return "float".to_string();
                        }
                        __IncanUnionf030b96172dcb024::V0(value) => {
                            return incan_std_core::strings::str_upper(&value);
                        }
                    }
                }
                __IncanUnionaff9193be7941891::V1(__incan_union_value_1) => {
                    let value = __IncanUnionf030b96172dcb024::V1(__incan_union_value_1);
                    match value {
                        __IncanUnionf030b96172dcb024::V1(_) => {
                            return "float".to_string();
                        }
                        __IncanUnionf030b96172dcb024::V0(value) => {
                            return incan_std_core::strings::str_upper(&value);
                        }
                    }
                }
            }
        }
        __IncanUnion43fbd19e99c1db05::V2(__incan_union_value_2) => {
            let value = __IncanUnionaff9193be7941891::V1(__incan_union_value_2);
            match value {
                __IncanUnionaff9193be7941891::V2(_) => {
                    return "int".to_string();
                }
                __IncanUnionaff9193be7941891::V0(__incan_union_value_0) => {
                    let value = __IncanUnionf030b96172dcb024::V0(__incan_union_value_0);
                    match value {
                        __IncanUnionf030b96172dcb024::V1(_) => {
                            return "float".to_string();
                        }
                        __IncanUnionf030b96172dcb024::V0(value) => {
                            return incan_std_core::strings::str_upper(&value);
                        }
                    }
                }
                __IncanUnionaff9193be7941891::V1(__incan_union_value_1) => {
                    let value = __IncanUnionf030b96172dcb024::V1(__incan_union_value_1);
                    match value {
                        __IncanUnionf030b96172dcb024::V1(_) => {
                            return "float".to_string();
                        }
                        __IncanUnionf030b96172dcb024::V0(value) => {
                            return incan_std_core::strings::str_upper(&value);
                        }
                    }
                }
            }
        }
        __IncanUnion43fbd19e99c1db05::V3(__incan_union_value_3) => {
            let value = __IncanUnionaff9193be7941891::V2(__incan_union_value_3);
            match value {
                __IncanUnionaff9193be7941891::V2(_) => {
                    return "int".to_string();
                }
                __IncanUnionaff9193be7941891::V0(__incan_union_value_0) => {
                    let value = __IncanUnionf030b96172dcb024::V0(__incan_union_value_0);
                    match value {
                        __IncanUnionf030b96172dcb024::V1(_) => {
                            return "float".to_string();
                        }
                        __IncanUnionf030b96172dcb024::V0(value) => {
                            return incan_std_core::strings::str_upper(&value);
                        }
                    }
                }
                __IncanUnionaff9193be7941891::V1(__incan_union_value_1) => {
                    let value = __IncanUnionf030b96172dcb024::V1(__incan_union_value_1);
                    match value {
                        __IncanUnionf030b96172dcb024::V1(_) => {
                            return "float".to_string();
                        }
                        __IncanUnionf030b96172dcb024::V0(value) => {
                            return incan_std_core::strings::str_upper(&value);
                        }
                    }
                }
            }
        }
    }
}
pub fn describe_wide_match(value: __IncanUnion43fbd19e99c1db05) -> String {
    let _ = match value {
        __IncanUnion43fbd19e99c1db05::V1(flag) => {
            if flag {
                return "bool:true".to_string();
            }
            return "bool:false".to_string();
        }
        __IncanUnion43fbd19e99c1db05::V3(n) => {
            return n.to_string();
        }
        __IncanUnion43fbd19e99c1db05::V2(f) => {
            return incan_std_core::strings::float_to_string(f);
        }
        __IncanUnion43fbd19e99c1db05::V0(s) => {
            return incan_std_core::strings::str_upper(&s);
        }
    };
}
pub fn describe_optional_narrow(value: Option<__IncanUnionc4e172615a54ed2d>) -> String {
    match value.clone() {
        Some(__IncanUnionc4e172615a54ed2d::V1(_)) => {
            return "number".to_string();
        }
        Some(__IncanUnionc4e172615a54ed2d::V0(__incan_option_union_value_0)) => {
            let value = Some(__incan_option_union_value_0);
            match value.clone() {
                None => {
                    return "missing".to_string();
                }
                Some(value) => {
                    return incan_std_core::strings::str_upper(&value);
                }
            }
        }
        None => {
            let value = None::<String>;
            match value.clone() {
                None => {
                    return "missing".to_string();
                }
                Some(value) => {
                    return incan_std_core::strings::str_upper(&value);
                }
            }
        }
    }
}
