loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__rfc041_structural_coercion.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn accept_option(value: Option<i64>) -> Option<i64> {
    return value;
}
fn accept_names(values: Vec<String>) -> Vec<String> {
    return values;
}
fn accept_scores(
    values: std::collections::HashMap<String, f64>,
) -> std::collections::HashMap<String, f64> {
    return values;
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let maybe_count: Option<i64> = Some(42);
    let names: Vec<String> = vec!["alice".to_string(), "bob".to_string()];
    let scores: std::collections::HashMap<String, f64> = [("latency".to_string(), 1.5)]
        .into_iter()
        .collect::<std::collections::HashMap<_, _>>();
    let _ = accept_option(maybe_count);
    let _ = accept_names(names);
    let _ = accept_scores(scores);
}
